continues css project layout refactor

--- a/src/sass/modules/_modules.scss
+++ b/src/sass/modules/_modules.scss
@@ -1,7 +1,7 @@
 @import "typography/typography";
 @import "grid/grid";
 @import "css-grid/css-grid";
-@import "header/header";
+// @import "navigation/header";
 @import "forms/forms";
 @import "forms/themed-elements";
 @import "forms/card-controls";
