initial pagination component

--- a/src/sass/modules/_modules.scss
+++ b/src/sass/modules/_modules.scss
@@ -5,7 +5,8 @@
 @import "forms/themed-elements";
 @import "forms/card-controls";
 @import "actions/actions";
-@import "actions/toggle-button";
+@import "actions/button-group";
+@import "pagination/pagination";
 @import "tooltip/tooltip";
 @import "card/card";
 @import "modal/modal";
