--- a/src/sass/base/utilities/_utilities.scss
+++ b/src/sass/base/utilities/_utilities.scss
@@ -66,6 +66,18 @@ $sides: (
   }
 }
 
+.screen-reader { //content is only "visible" to a screen reader
+  display: block;
+  height: 1px;
+  width: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  white-space: nowrap;
+  position: absolute;
+}
+
 .hide, .hidden, .is-hidden { display: none !important; }
 
 //Hide on mobile
