--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -114,4 +114,36 @@
       }
     }
   }
+  //Table within Card
+  .card-table {
+    overflow-x: auto;
+    border-radius: 0 0 5px 5px;
+    .table,
+    table {
+      margin-top: $grid-gutter !important;
+      border-radius: 0 0 5px 5px;
+      th {
+        border-top: 2px solid;
+        border-color: $gray-200;
+        padding: $space-xs $space-m !important;
+        background-color: $gray-100;
+      }
+      &.has-arrow {
+        th,tr {
+          td:last-of-type  {
+            width: 3rem;
+          }
+        }
+      }
+      &.is-selectable {
+        tbody tr {
+          transition: $global-transition;
+          &:hover {
+            cursor: pointer;
+            background-color: $gray-100;
+          }
+        }
+      }
+    }
+  }
 }
