--- a/src/sass/experimental/x-card.scss
+++ b/src/sass/experimental/x-card.scss
@@ -18,3 +18,35 @@ h1, h2, h3, h4 { margin-bottom: $space-xxs; }
 .grid .card {
   margin-bottom: $space-m;
 }
+
+.loading {
+  position: relative;
+  background-color: $gray-100;
+  border-radius: 3px;
+
+  &::after {
+    display: block;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transform: translateX(-100%);
+    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
+    animation: loading 1.5s infinite;
+  }
+}
+
+@keyframes loading {
+  100% {
+    transform: translateX(100%);
+  }
+}
+
+.card-header .loading {
+  height: 1.563rem; //h2 height
+  width: 150px;
+}
+
+.card-content .loading {
+  height: 1.5rem;
+}
