--- a/src/sass/experimental/x-card.scss
+++ b/src/sass/experimental/x-card.scss
@@ -19,20 +19,44 @@ h1, h2, h3, h4 { margin-bottom: $space-xxs; }
   margin-bottom: $space-m;
 }
 
-.loading {
-  position: relative;
-  background-color: $gray-100;
-  border-radius: 3px;
+.card {
+  &.is-loading {
+    overflow: hidden;
+    .card-header, .card--header,
+    .card-content, .card--content,
+    .card-footer, .card--footer {
+      overflow: hidden;
+      * { //Targets all elements inside the card header, content, and footer
+        position: relative;
+        background-color: $gray-100;
+        border-radius: 3px;
+        height: 1.25rem;
 
-  &::after {
-    display: block;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform: translateX(-100%);
-    background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .4), transparent);
-    animation: loading 1.5s infinite;
+        &::after {
+          display: block;
+          content: '';
+          position: absolute;
+          width: 100%;
+          height: 100%;
+          transform: translateX(-100%);
+          background: linear-gradient(90deg, transparent, rgba(255, 255, 255, .7), transparent);
+          animation: loading 1.2s infinite;
+        }
+      }
+    }
+    .card-header,
+    .card--header {
+      * {
+        width: 200px; //Sets a static width for the header
+      }
+    }
+    .card-footer,
+    .card--footer {
+      button {
+        width: 100px; //Sets a static width for footer buttons
+        margin: 0;
+      }
+    }
   }
 }
 
@@ -40,13 +64,4 @@ h1, h2, h3, h4 { margin-bottom: $space-xxs; }
   100% {
     transform: translateX(100%);
   }
-}
-
-.card-header .loading {
-  height: 1.563rem; //h2 height
-  width: 150px;
-}
-
-.card-content .loading {
-  height: 1.5rem;
 }
