--- a/src/sass/modules/navigation/navigation.scss
+++ b/src/sass/modules/navigation/navigation.scss
@@ -129,6 +129,7 @@ $header-shadow: 0px 1px 5px rgba(0, 0, 0, 0.5) !default;
 
         border-bottom: 3px solid transparent;
         &:hover, &.active  { border-bottom: 3px solid $header-color; }
+        &:active { pointer-events: none; }
       }
     }
   }
