--- a/src/sass/modules/forms/forms.scss
+++ b/src/sass/modules/forms/forms.scss
@@ -125,13 +125,13 @@ fieldset {
       font-weight: 600;
       pointer-events: none;
       position: absolute;
-      right: 2rem; bottom: calc(#{$grid-gutter} * 2);
+      right: 2rem;
+      top: 2.4rem;
     }
 
     .grid & { //supports select positioning in grid
       &:after {
         right: 1rem;
-        bottom: 2rem;
       }
     }
 
