Add react tippy examples

--- a/src/sass/modules/tooltip/_tooltip.scss
+++ b/src/sass/modules/tooltip/_tooltip.scss
@@ -29,30 +29,39 @@ p .dashing-tooltip {
 span.dashing-tooltip { display: inline-block; }
 
 //Custom Tooltip Code
-.tooltip {
-	background-color: $tooltip-color;
-	opacity: 1 !important;
-  box-shadow: 0 4px 8px rgba(0,0,0, 0.3);
-  border: none;
-  max-width: 250px;
-  padding: $space-s;
-  border-radius: 5px;
-	//overflow: hidden;
-	font-weight: $font-weight-semibold;
-}
+.tippy-tooltip {
+	&.dark-theme {
+		background-color: $tooltip-color;
+		box-shadow: 0 4px 8px rgba(0,0,0, 0.3);
+	  border: none;
+		border-radius: 10px;
+	  max-width: 250px;
+		[x-arrow] {
+			border-bottom-color: $tooltip-color !important;
+			border-top-color: $tooltip-color !important;
+		}
 
-.clippy {
-	background-color: $clippy-color !important;
-	opacity: 1 !important;
-	border-radius: 5px !important;
-	box-shadow: 0 4px 8px rgba(0,0,0, 0.2);
-	border: 2px solid $gray-200;
-	max-width: 350px;
-	padding: $space-m;
-	&.place-top { margin-top: -5px !important; }
-	&:hover {
-		visibility: visible !important;
-		opacity: 1 !important;
+		.tippy-tooltip-content {
+			font-weight: 600;
+	    font-size: 0.9rem;
+	    line-height: 1.1rem;
+		}
 	}
-	&:after { display: none; }
+	&.light-theme {
+		border: 2px solid $gray-200;
+		box-shadow: 0 4px 8px rgba(0,0,0, 0.2) !important;
+		max-width: 350px;
+		border-radius: 5px;
+
+		.tippy-tooltip-content {
+			font-weight: 400;
+	    font-size: 0.9rem;
+	    line-height: 1.2rem;
+			padding: 0;
+
+			h4, p { font-size: 0.9rem; }
+			h4 { font-weight: 600;}
+			a { margin-top: 0.5rem; }
+		}
+	}
 }
