Add disabled button example

--- a/src/sass/modules/tooltip/_tooltip.scss
+++ b/src/sass/modules/tooltip/_tooltip.scss
@@ -28,7 +28,8 @@ p .dashing-tooltip {
 
 span.dashing-tooltip { display: inline-block; }
 
-//Custom Tooltip Code
+/* Custom Tippy.js Themes
+  =========================================================================== */
 .tippy-tooltip {
 
 	&.default-theme {
