removed readme and dash language

--- a/src/sass/example-page/prism.scss
+++ b/src/sass/example-page/prism.scss
@@ -67,7 +67,7 @@ $tablet:        "all and (min-width: 40em)" !default;
 	}
 }
 
-.page-header { //TODO add to dashing
+.page-header { 
   // background-color: $gray-200;
 	background-color: #393e41;
 	line-height: 1.7rem;
