Links - Add default focus ring on focus - Add text-decoration underline to link on hover/focus Actions - Custom focus style on tab

--- a/src/sass/example-page/example-page.scss
+++ b/src/sass/example-page/example-page.scss
@@ -213,6 +213,7 @@ $sidebar-width:  13rem;
     padding-left: 1rem;
     a {
       text-transform: uppercase;
+      text-decoration: none;
       color: white;
       margin-right: 1rem;
       padding-bottom: 0.3rem;
