--- a/src/sass/modules/tooltip/_tooltip.scss
+++ b/src/sass/modules/tooltip/_tooltip.scss
@@ -1,9 +1,12 @@
+$tooltip-color: $gray-700;
+$clippy-color: $white;
+
 //STATE
 .has-tooltip { @include user-select(none); }
 
 //MODULE
-i.dashing-tooltip,
-i.dashing-clippy {
+i.paragon-tooltip,
+i.paragon-clippy {
 	@extend .dashing-icon;
 	@extend .dashing-icon--question-filled;
 	@extend .dashing-icon--gray;
@@ -18,9 +21,53 @@ i.dashing-clippy {
   }
 }
 
-span .dashing-tooltip,
-p .dashing-tooltip {
+span .paragon-tooltip,
+p .paragon-tooltip,
+label .paragon-clippy {
   margin-left: 0.2rem;
 }
 
-span.dashing-tooltip { display: inline-block; }
+span.paragon-tooltip { display: inline-block; }
+
+/* Custom Tippy.js Themes
+  =========================================================================== */
+.tippy-tooltip {
+
+	&.default-theme {
+		background-color: $tooltip-color;
+		box-shadow: 0 4px 8px rgba(0,0,0, 0.3);
+	  border: none;
+		border-radius: 5px;
+		.tippy-backdrop { background-color: $tooltip-color; }
+		.tippy-content {
+			font-weight: 600;
+			font-size: 0.9rem;
+			line-height: 1.1rem;
+		}
+		.tippy-roundarrow {
+			fill: $tooltip-color;
+		}
+	}
+
+	&.clippy-theme {
+		border: 2px solid $gray-200;
+		box-shadow: 0 4px 8px rgba(0,0,0, 0.2) !important;
+		border-radius: 5px;
+		background-color: $clippy-color;
+		.tippy-backdrop { background-color: $clippy-color; }
+		.tippy-content {
+			font-weight: 400;
+			font-size: 0.9rem;
+			line-height: 1.2rem;
+			padding: 0;
+			color: $gray-900;
+			text-align: left;
+			padding: 0.2rem;
+
+			h4, p { font-size: 0.9rem; }
+			p { line-height: 1.2rem; }
+			h4 { font-weight: 600;}
+			a { margin-top: 0.5rem; }
+		}
+	}
+}
