--- a/src/sass/modules/card/_card.scss
+++ b/src/sass/modules/card/_card.scss
@@ -135,10 +135,12 @@
 
 //Set the margin of Cards when they are within a Grid
 .grid {
-  :not(.checkbox-card):not(.radio-card) > .card {
+  :not(.checkbox-card):not(.radio-card) > .card,
+  &:not(.checkbox-card):not(.radio-card) > .card {
     @media #{$phone} {
       margin: 0 -#{$grid-gutter} $grid-gutter -#{$grid-gutter};
       border-radius: 0;
+      &:last-of-type { margin-bottom: 0; }
     }
     @media #{$tablet} {
       margin: 0 0 $grid-gutter 0;
